Incremental reveal animation.

--- a/src/group-view.html
+++ b/src/group-view.html
@@ -91,6 +91,8 @@ function updateLayout(layout, students, assignments){
   for (var i = 0; i < assignments.length; i++) {
     layout.addCluster(assignments[i].getStudentIDs());
   }
+  layout.concealClusters();
+  layout.startReveal(600);
 }
 
 var updateLocalStorage = function(grouping){
