table-view.html

--- a/src/table-view.html
+++ b/src/table-view.html
@@ -5,6 +5,7 @@
 <script src="../external_js/jquery-1.12.2.js"></script>
 <script src="../external_js/jquery-ui.js"></script>
 <script src="../external_js/jquery.tooltipster.min.js"></script>
+<script src="../external_js/sampledata.js"></script>
 
 <link href="../src/toggle_button.css" rel="stylesheet">
 <link href='https://fonts.googleapis.com/css?family=Raleway:400,300' rel='stylesheet' type='text/css'>
