--- a/src/table-view.html
+++ b/src/table-view.html
@@ -5,7 +5,6 @@
 <script src="../external_js/jquery-1.12.2.js"></script>
 <script src="../external_js/jquery-ui.js"></script>
 <script src="../external_js/jquery.tooltipster.min.js"></script>
-<script src="../external_js/sampledata.js"></script>
 
 <link href="../src/toggle_button.css" rel="stylesheet">
 <link href='https://fonts.googleapis.com/css?family=Raleway:400,300' rel='stylesheet' type='text/css'>
@@ -87,6 +86,7 @@
 
 <script src="../src/classlist.js"></script>
 <script src="../src/student.js"></script>
+<script src="../src/sampledata.js"></script>
 
 <script>
 var ADD_INITIAL_LIST = false;
