Add example text.

--- a/src/table-view.html
+++ b/src/table-view.html
@@ -90,7 +90,7 @@
 <script>
 var ADD_INITIAL_LIST = false;
 var ADD_CLASSNAME_PLACEHOLDER = "enter class name"
-var ADD_STUDENT_BOX_PLACEHOLDER = "type in (or copy/paste) student names"
+var ADD_STUDENT_BOX_PLACEHOLDER = "paste or enter student names like this:\nAlice, Bob, Cory, David"
 var REVERT_SPEED_DURATION = 500;
 var MIN_STUDENTS_PER_GROUP = 2;
 var MAX_STUDENTS_PER_GROUP = Number.POSITIVE_INFINITY;
