Change word to preferences

--- a/src/table-view.html
+++ b/src/table-view.html
@@ -31,7 +31,7 @@
    <li class='last'><a id='link_to_group_view' href='group-view.html'></a></li>
    <li class='teachermode_switch'>
       <p>
-        <span id='teachermode_text'>Private:</span>
+        <span id='teachermode_text'>Preferences</span>
 
         <span class="switch">
             <input id="cmn-toggle-4" class="cmn-toggle cmn-toggle-round-flat" type="checkbox">
