implemented preference-based matching

--- a/src/group-view.html
+++ b/src/group-view.html
@@ -47,11 +47,11 @@
 <script src="../external_js/lodash.js"></script>
 <script src="../external_js/d3.js"></script>
 <script src="../external_js/jquery-1.12.2.js"></script>
-
 <script src="../src/classlist.js"></script>
 <script src="../src/student.js"></script>
 <script src="../src/group.js"></script>
 <script src="../src/grouping.js"></script>
+<script src="../src/preference-helper.js"></script>
 <script src="../src/cluster-layout.js"></script>
 
 <script>
