--- a/src/table-view.html
+++ b/src/table-view.html
@@ -6,6 +6,7 @@
 <script src="../external_js/jquery-1.12.2.js"></script>
 <script src="../external_js/jquery-ui.js"></script>
 <script src="../external_js/jquery.tooltipster.min.js"></script>
+<script src="../external_js/jquery.pagewalkthrough.js"></script>
 
 <link href="../src/toggle_button.css" rel="stylesheet">
 <link href='https://fonts.googleapis.com/css?family=Raleway:400,300' rel='stylesheet' type='text/css'>
@@ -13,9 +14,8 @@
 
 <link rel="stylesheet" href="../src/sidebar.css">
 <link rel='stylesheet' href="../src/table-view.css">
-
 <link type="text/css" rel='stylesheet' href="css/jquery.pagewalkthrough.css">
-<script type="text/javascript" src="jquery.pagewalkthrough.js"></script>
+
 
 
 <body class = "hideprefs">
@@ -137,7 +137,7 @@
             }   
         }]
     });
-          //$('body').pagewalkthrough('show');
+          $('body').pagewalkthrough('show');
           localStorage.seenwalkthrough = "seen"; 
     }
 </script>
