--- a/src/table-view.html
+++ b/src/table-view.html
@@ -202,6 +202,7 @@ var parseStudentList = function(classroom) {
           if (studentName.length > 0){
             studentName = adjustNameForDuplicates(studentName, classroom);
             classroom.add(new Student(studentName, nextStudentID));
+            nextStudentID = classroom.getNextStudentID();
           }
         }
     } else if (row_list.length == 2) {
