--- a/src/table-view.html
+++ b/src/table-view.html
@@ -663,6 +663,71 @@ $(document).ready(function() {
     $('.candrop').toggleClass('candrop', false);
   }
 
+  var ENABLE_INLINE_ENTRY = true;
+
+  // The code below supports inline entry of pair-with and dont-pair-with
+  // preferences.  It is not done yet, but it won't take much work to
+  // complete.  All that needs to be implemented is the "addTypedPreference"
+  // function at the bbottom of this section - that currently just logs
+  // a message saying which student preference was added.
+  if (ENABLE_INLINE_ENTRY) {
+    function selectAll(editable) {
+      var sel, range;
+      if (window.getSelection && document.createRange) {
+        range = document.createRange();
+        range.selectNodeContents(editable);
+        sel = window.getSelection();
+        sel.removeAllRanges();
+        sel.addRange(range);
+      } else if (document.body.createTextRange) {
+        range = document.body.createTextRange();
+        range.moveToElementText(editable);
+        range.select();
+      }
+    }
+    var editableSpan = null;
+    function startEditing(cell) {
+      if (editableSpan) finishEditing();
+      editableSpan = $('<div class=directentry contentEditable=true>')
+          .appendTo(cell);
+      editableSpan.on('keydown', function(e) {
+        if (e.which == 13 || // enter
+            e.which == 9 || // tab
+            e.which == 188 || // comma
+            e.which == 186) { // semicolon
+          finishEditing();
+          setTimeout(function() {
+            startEditing(cell);
+          }, 0);
+        }
+      });
+      editableSpan.on('blur', finishEditing);
+      selectAll(editableSpan[0]);
+      editableSpan.focus();
+    }
+
+    function finishEditing() {
+      addTypedPreference(
+          editableSpan.closest('tr').find('td').eq(0).data('studentID'),
+          editableSpan.closest('tr').find('td').eq(0).text(),
+          editableSpan.closest('td').hasClass('pair_with') ? 'prefer' : 'avoid',
+          editableSpan.text().trim());
+      editableSpan.remove();
+      editableSpan = null;
+    }
+
+    function addTypedPreference(studentID, studentName, pref, typedName) {
+      console.log('typed pref:', studentID, studentName, pref, typedName);
+    }
+  }
+
+  // Content editable behavior for pair_with / dont_pair_with cells
+  $("table").on('click', 'td.pair_with,td.dont_pair_with', function (e) {
+    if (!$(this).is('td')) { return; }
+    console.log('whee');
+    startEditing(this);
+  });
+
   //drag and drop behavior for name tiles
   $("table").on('mouseenter',".tile_name", function() {
     $(this).css( 'cursor', 'grabbing' )
