new class button

--- a/src/table-view.html
+++ b/src/table-view.html
@@ -45,6 +45,9 @@
       </p>
     </li>
     <li>
+      <a id = "new_class">New Class</a>
+    </li>
+    <li>
       <a id = "help_button">Help</a>
     </li>
 </ul>
@@ -727,7 +730,6 @@ $(document).ready(function() {
   // Content editable behavior for pair_with / dont_pair_with cells
   $("table").on('click', 'td.pair_with,td.dont_pair_with', function (e) {
     if (!$(this).is('td')) { return; }
-    console.log('whee');
     startEditing(this);
   });
 
@@ -923,6 +925,12 @@ $(document).ready(function() {
     } else {
       alert("should never get here since groupem button should be disabled if size < MIN_STUDENTS_PER_GROUP")
     }
+  });
+
+  $("#new_class").click(function() {
+    classroom = new Classlist();
+    localStorage.removeItem('classroom');
+    updatePage(classroom);
   });
 
 
