--- a/src/table-view.html
+++ b/src/table-view.html
@@ -35,7 +35,7 @@
    <li class='last'><a id='link_to_group_view' href='group-view.html'></a></li>
    <li class='teachermode_switch'>
       <p>
-        <span id='teachermode_text'>Preferences</span>
+        <span id='teachermode_text'>preferences</span>
 
         <span class="switch">
             <input id="cmn-toggle-4" class="cmn-toggle cmn-toggle-round-flat" type="checkbox">
@@ -108,7 +108,7 @@
         <img src="Student_table.png" width="300">
         </div>
       <div id="walkthrough-3">
-        Turn on Preferences to indicate which students would like to work together and which would not. 
+        Turn on preferences to indicate which students would like to work together and which would not. 
       </div>
     </div>
 
